--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <button class="btn" id="noBtn">No</button>
         </div>
         <img src="https://i.pinimg.com/736x/41/2e/cd/412ecd40cc1ef3f6bdba866341cdf797.jpg" alt="Corazón roto" class="brokenheartimg" id="brokenHeartImg">
-        <img src="../sanvalentin/muak.jpeg" alt="Celebración" class="yes-img" id="yesImg">
+        <img src="muak.jpeg" alt="Celebración" class="yes-img" id="yesImg">
     </div>
 
     <script>
